[package]
name = "adventofcode2020"
version = "1.0.0"
authors = ["Pelle Månsson <pelle.mansson@attentec.se>"]
edition = "2018"

[lib]
name="codegen_stuff"
path="src/codegen_stuff.rs"
proc-macro=true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
syn = "1.0.53"
quote = "1.0.7"
